--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap");
 :root {
-  --card-largura: 200px;
-  --card-altura: 300px;
-  --card-duracao-transicao: 800ms;
-  --card-transicao-tipo-saida: ease;
+  --card-width: 200px;
+  --card-height: 300px;
+  --card-transition-duration: 800ms;
+  --card-transition-easing: ease;
 }
 
 * {
@@ -32,7 +32,7 @@ button:focus {
   border: none;
 }
 
-.conteudo {
+.app {
   position: relative;
   width: 100%;
   height: 100%;
@@ -40,7 +40,7 @@ button:focus {
   justify-content: center;
   align-items: center;
 }
-.conteudo__background {
+.app__bg {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -50,7 +50,7 @@ button:focus {
   user-select: none;
   overflow: hidden;
 }
-.conteudo__background::before {
+.app__bg::before {
   content: "";
   position: absolute;
   left: 0;
@@ -61,42 +61,41 @@ button:focus {
   z-index: 1;
   opacity: 0.8;
 }
-.conteudo__backgorund__imagem {
+.app__bg__image {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%) translateX(var(--image-translate-offset, 0));
-  width: 100%;
-  height: 100%;
+  width: 180%;
+  height: 180%;
   transition: transform 1000ms ease, opacity 1000ms ease;
   overflow: hidden;
 }
-.conteudo__backgorund__imagem img {
+.app__bg__image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.conteudo__backgorund__imagem.imagem--corrente {
+.app__bg__image.current--image {
   opacity: 1;
   --image-translate-offset: 0;
 }
-.conteudo__backgorund__imagem.imagem--anterior,
-.conteudo__backgorund__imagem.imagem--proxima {
+.app__bg__image.previous--image, .app__bg__image.next--image {
   opacity: 0;
 }
-.conteudo__backgorund__imagem.imagem--anterior {
+.app__bg__image.previous--image {
   --image-translate-offset: -25%;
 }
-.conteudo__backgorund__imagem.imagem--proxima {
+.app__bg__image.next--image {
   --image-translate-offset: 25%;
 }
 
-.lista__cards {
+.cardList {
   position: absolute;
-  width: calc(3 * var(--card-largura));
+  width: calc(3 * var(--card-width));
   height: auto;
 }
-.lista__cards__btn {
+.cardList__btn {
   --btn-size: 35px;
   width: var(--btn-size);
   height: var(--btn-size);
@@ -105,21 +104,21 @@ button:focus {
   transform: translateY(-50%);
   z-index: 100;
 }
-.lista__cards__btn.btn-esquerda {
+.cardList__btn.btn--left {
   left: -5%;
 }
-.lista__cards__btn.btn--direita {
+.cardList__btn.btn--right {
   right: -5%;
 }
-.lista__cards__btn .icone {
+.cardList__btn .icon {
   width: 100%;
   height: 100%;
 }
-.lista__cards__btn .icone svg {
+.cardList__btn .icon svg {
   width: 100%;
   height: 100%;
 }
-.lista__cards .conteudo__cards {
+.cardList .cards__wrapper {
   position: relative;
   width: 100%;
   height: 100%;
@@ -131,14 +130,11 @@ button:focus {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%) translateX(var(--card-translateX-offset))
-    translateY(var(--card-translateY-offset))
-    rotateY(var(--card-rotation-offset)) scale(var(--card-scale-offset));
+  transform: translate(-50%, -50%) translateX(var(--card-translateX-offset)) translateY(var(--card-translateY-offset)) rotateY(var(--card-rotation-offset)) scale(var(--card-scale-offset));
   display: inline-block;
-  width: var(--card-largura);
-  height: var(--card-altura);
-  transition: transform var(--card-duracao-transicao)
-    var(--card-transicao-tipo-saida);
+  width: var(--card-width);
+  height: var(--card-height);
+  transition: transform var(--card-transition-duration) var(--card-transition-easing);
   user-select: none;
 }
 .card::before {
@@ -150,16 +146,15 @@ button:focus {
   height: 100%;
   background: #000;
   z-index: 1;
-  transition: opacity var(--card-duracao-transicao)
-    var(--card-transicao-tipo-saida);
+  transition: opacity var(--card-transition-duration) var(--card-transition-easing);
   opacity: calc(1 - var(--opacity));
 }
-.imagem--card {
+.card__image {
   position: relative;
   width: 100%;
   height: 100%;
 }
-.imagem--card img {
+.card__image img {
   position: absolute;
   left: 0;
   top: 0;
@@ -167,34 +162,33 @@ button:focus {
   height: 100%;
   object-fit: cover;
 }
-.card.card--corrente {
+.card.current--card {
   --current-card-rotation-offset: 0;
   --card-translateX-offset: 0;
   --card-rotation-offset: var(--current-card-rotation-offset);
   --card-scale-offset: 1.2;
   --opacity: 0.8;
 }
-.card.card--anterior {
-  --card-translateX-offset: calc(-1 * var(--card-largura) * 1.1);
+.card.previous--card {
+  --card-translateX-offset: calc(-1 * var(--card-width) * 1.1);
   --card-rotation-offset: 25deg;
 }
-.card.card--proximo {
-  --card-translateX-offset: calc(var(--card-largura) * 1.1);
+.card.next--card {
+  --card-translateX-offset: calc(var(--card-width) * 1.1);
   --card-rotation-offset: -25deg;
 }
-.card.card--anterior,
-.card.card--proximo {
+.card.previous--card, .card.next--card {
   --card-scale-offset: 0.9;
   --opacity: 0.4;
 }
 
-.listagem__informacoes {
+.infoList {
   position: absolute;
-  width: calc(3 * var(--card-largura));
-  height: var(--card-altura);
+  width: calc(3 * var(--card-width));
+  height: var(--card-height);
   pointer-events: none;
 }
-.listagem__informacoes .conteudo__informacoes {
+.infoList .info__wrapper {
   position: relative;
   width: 100%;
   height: 100%;
@@ -206,63 +200,65 @@ button:focus {
 }
 
 .info {
-  margin-bottom: calc(var(--card-altura) / 8);
-  margin-left: calc(var(--card-largura) / 1.5);
+  margin-bottom: calc(var(--card-height) / 8);
+  margin-left: calc(var(--card-width) / 1.5);
   transform: translateZ(2rem);
-  transition: transform var(--card-duracao-transicao)
-    var(--card-transicao-tipo-saida);
+  transition: transform var(--card-transition-duration) var(--card-transition-easing);
 }
-.info .texto {
+.info .text {
   position: relative;
-  font-family: "Poppins";
-  font-size: calc(var(--card-largura) * var(--texto-size-offset, 0.2));
+  font-family: "Montserrat";
+  font-size: calc(var(--card-width) * var(--text-size-offset, 0.2));
   white-space: nowrap;
   color: #fff;
   width: fit-content;
 }
-.info .nome,
-.info .localizacao {
-  texto-transform: uppercase;
+.info .name,
+.info .location {
+  text-transform: uppercase;
 }
-.info .localizacao {
+.info .location {
   font-weight: 800;
 }
-.info .localizacao {
+.info .location {
   --mg-left: 40px;
-  --texto-size-offset: 0.12;
+  --text-size-offset: 0.12;
   font-weight: 600;
-  margin-left: var(--mg r-left);
+  margin-left: var(--mg-left);
   margin-bottom: calc(var(--mg-left) / 2);
   padding-bottom: 0.8rem;
 }
-.info .localizacao::before,
-.info .localizacao::after {
+.info .location::before, .info .location::after {
   content: "";
   position: absolute;
   background: #fff;
   left: 0%;
   transform: translate(calc(-1 * var(--mg-left)), -50%);
 }
-.info .localizacao::after {
+.info .location::before {
+  top: 50%;
+  width: 20px;
+  height: 5px;
+}
+.info .location::after {
   bottom: 0;
   width: 60px;
   height: 2px;
 }
-.info .descricao {
-  --texto-size-offset: 0.065;
+.info .description {
+  --text-size-offset: 0.065;
   font-weight: 500;
 }
-.info.informacoes__corrente {
+.info.current--info {
   opacity: 1;
   display: block;
 }
-.info.informacoes__anterior,
-.info.informacoes__seguinte {
+.info.previous--info, .info.next--info {
   opacity: 0;
   display: none;
 }
 
-.conteudo__carregamento {
+.loading__wrapper {
   position: fixed;
   left: 0;
   top: 0;
@@ -275,30 +271,49 @@ button:focus {
   background: #000;
   z-index: 200;
 }
-
-.conteudo__carregamento .carregamento {
-  height: 50px;
-  width: 50px;
-  border-radius: 100%;
-  border: 3px solid #009739;
-  border-top-color: transparent;
-  border-bottom-color: transparent;
-  animation: rotation 1s linear infinite;
+.loading__wrapper .loader--text {
+  color: #fff;
+  font-family: "Montserrat";
+  font-weight: 500;
+  margin-bottom: 1.4rem;
 }
-
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
+.loading__wrapper .loader {
+  position: relative;
+  width: 200px;
+  height: 2px;
+  background: rgba(255, 255, 255, 0.25);
+}
+.loading__wrapper .loader span {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: red;
+  transform: scaleX(0);
+  transform-origin: left;
 }
 
 @media only screen and (min-width: 800px) {
   :root {
-    --card-largura: 250px;
-    --card-altura: 400px;
+    --card-width: 250px;
+    --card-height: 400px;
   }
+}
+.support {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  padding: 10px;
+  display: flex;
+}
+.support a {
+  margin: 0 10px;
+  color: #fff;
+  font-size: 1.8rem;
+  backface-visibility: hidden;
+  transition: all 150ms ease;
+}
+.support a:hover {
+  transform: scale(1.1);
 }
